--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script>
         function mostrarResposta() {
             document.getElementById('resposta').style.display = 'block';
-            document.getElementById('resposta').innerHTML = 'É uma honra sempre estar com você! ❤️';
+            document.getElementById('resposta').innerHTML = 'Obrigado por ter aceitado! ❤️';
         }
 
         function mudarPosicao() {
@@ -51,7 +51,7 @@
         const botao = document.getElementById('nao');
 
         texto.addEventListener('click', function() {
-        nao.style.display = 'none'; // Oculta o botão ao clicar no texto
+        nao.style.display = 'none'; 
         }
 );
     </script>
