--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script>
         function mostrarResposta() {
             document.getElementById('resposta').style.display = 'block';
-            document.getElementById('resposta').innerHTML = 'Obrigado por ter aceitado! ❤️';
+            document.getElementById('resposta').innerHTML = 'Fico feliz que tenha aceitado! ❤️';
         }
 
         function mudarPosicao() {
